The highlight border of the default button is not displayed even if with Default(system) theme. And also no mouse hover feedback
Categories
(Firefox :: Theme, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | unaffected |
firefox95 | + | verified |
People
(Reporter: alice0775, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
Stes To Reproduce:
- Start firefox.exe -p
--- observe - Open Dialog (not tab modal dialog)
such as Password Required import From Another Browser
--- observe
Actual results:
No highlight border for default button
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3864fbda86cb6cdfed2353be3e39edca79735221&tochange=cc9028cb90d72d12c13e2af25a996abfcd68ecba
![]() |
Reporter | |
Comment 1•3 years ago
|
||
And also no mouse hover feedback.
Assignee | ||
Comment 2•3 years ago
|
||
Hmm, that's not right, we shouldn't use the non-native theme there if the system is light.
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
Oversight from the regressing bug, without this we always draw supported widgets
with the non-native theme, even when the native theme also supports it.
Comment 5•3 years ago
|
||
bugherder |
Comment 6•3 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 8•3 years ago
|
||
Reproduced with Fx 95.0a1 (2021-10-07) on Windows 10.
Verified fixed with Fx 96.0a1 (2021-11-02) and Fx 95.0b2 on Windows 10.
Updated•3 years ago
|
Description
•