Bug 1734698 - Override nsNativeThemeWin::CreateWebRenderCommands. r=mstange

Oversight from the regressing bug, without this we always draw supported widgets
with the non-native theme, even when the native theme also supports it.

Differential Revision: https://phabricator.services.mozilla.com/D127886